# macropad-application

./: CMakeLists.txt  README.md  main.c  program.txt  send_hid_report.c
.github/workflows/: main.yml
macro_programming/: macro_programming.c  macro_programming.h
parse_dsl/: char_to_hid_map.c  char_to_hid_map.h  keycodes.h  parse_dsl.c  parse_dsl.h  read_dsl_file.c  read_dsl_file.h
